...
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                    </stackView>
                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="Khv-XC-htB">
                        <rect key="frame" x="12" y="57" width="64" height="64"/>
                        <accessibility key="accessibilityConfiguration" identifier="User Image" label="User Image">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstAttribute="width" secondItem="Khv-XC-htB" secondAttribute="height" multiplier="1:1" id="zuP-he-rzs"/>
                        </constraints>
                    </imageView>
...
                    <constraint firstItem="fAm-qB-kzN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Ea5-9g-ZmM"/>
                    <constraint firstItem="Khv-XC-htB" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.2" id="gmA-82-y9c"/>
                    <constraint firstItem="Khv-XC-htB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="gv0-nf-skb"/>
                    <constraint firstAttribute="trailing" secondItem="fAm-qB-kzN" secondAttribute="trailing" constant="10" id="yOP-TX-MQc"/>
                </constraints>
            </tableViewCellContentView>
            <accessibility key="accessibilityConfiguration" identifier="Tweet cell" label="Tweet cell">
                <bool key="isElement" value="YES"/>
            </accessibility>
            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
            <connections>
                <outlet property="labelScreenName" destination="Cdh-0g-O1E" id="uar-r8-4vt"/>
                <outlet property="labelTweet" destination="bKg-29-9Kr" id="f6t-uS-g8P"/>
...
