...
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="408" height="381"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="lTc-AY-59O">
                        <rect key="frame" x="0.0" y="0.0" width="408" height="163"/>
                        <accessibility key="accessibilityConfiguration" identifier="User Banner Image" label="User Banner Image">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                    </imageView>
                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="1xj-qL-zu2">
                        <rect key="frame" x="15" y="130.5" width="65.5" height="65.5"/>
                        <accessibility key="accessibilityConfiguration" identifier="User Profile Image" label="User Profile Image">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstAttribute="width" secondItem="1xj-qL-zu2" secondAttribute="height" multiplier="1:1" id="sNV-f1-yiW"/>
                        </constraints>
                    </imageView>
...
